Update to Minecraft 26.2 (Paper API 26.2, Java 25)
- Build against paper-api 26.2 with a Java 25 toolchain, Gradle 9.8.0 and
  api-version 26.2; the plugin.yml version now comes from build.gradle
- Replace the NMS reflection used for block step sounds with
  BlockData#getSoundGroup and use Particle.BLOCK (BLOCK_DUST was removed)
- Drop the "MC: x.y" version parser, which crashed on 26.x, along with the
  legacy 1.8-1.16 code paths
- Use the official bStats library (shaded and relocated) instead of the
  old bundled Metrics class
- Use the WorldGuard 7 API directly for the wall-jump flag
- Hook Spartan, AAC, NoCheatPlus and TreysDoubleJump via reflection, so
  none of them are needed to build and a missing/changed API can't break
  plugin startup
- Run the wall-jump tasks on the main thread instead of async, since they
  set velocity, read blocks and fire events
- Use Material.matchMaterial for the block blacklist

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_013S8cGhRGDNuJRdg18WMoNy